--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="android:windowLightStatusBar">true</item> -->
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:fontFamily">@font/nunitomedium</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="CornerShapableImageView">
@@ -22,6 +23,11 @@
     </style>
     <style name="CornerShapableImageView5">
         <item name="cornerSize">40dp</item>
+    </style>
+
+    <style name="RoundImage" >
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 
     <style name="CustomTabText" parent="TextAppearance.MaterialComponents.Button">
